--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,9 +1,9 @@
 name: Build Android App (No Signing)
 
-on:
-  push:
-    branches: [ master ]  
 
+on:
+  workflow_dispatch:
+  
 jobs:
   build:
     runs-on: ubuntu-latest
