--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,9 +1,8 @@
 name: Build Android App (No Signing)
 
-
 on:
   workflow_dispatch:
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,7 +13,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: 11  
+          distribution: 'zulu-11'  
 
       - name: Grant Gradlew permissions
         run: chmod +x gradlew
@@ -25,6 +24,5 @@ jobs:
       - name: Upload App as Artifact (Optional)
         uses: actions/upload-artifact@v3
         with:
-          name: debug-apk  # Change the name as needed
+          name: debug-apk  
           path: app/build/outputs/apk/debug/app-debug.apk  
-
