--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,28 +1,28 @@
-name: Build Android App (No Signing)
+name: Android Build
 
-on:
-  workflow_dispatch:
+on: workflow_dispatch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu-11'  
+    - name: Set up JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: 11 
+        distribution: 'adopt'
 
-      - name: Grant Gradlew permissions
-        run: chmod +x gradlew
+    - name: Build Android app
+      run: |
+        chmod +x ./gradlew
+        ./gradlew assembleDebug
 
-      - name: Build the App (Unsigned)
-        run: ./gradlew assembleDebug  
-
-      - name: Upload App as Artifact (Optional)
-        uses: actions/upload-artifact@v3
-        with:
-          name: debug-apk  
-          path: app/build/outputs/apk/debug/app-debug.apk  
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: app-debug.apk
+        path: app/build/outputs/apk/debug/app-debug.apk
