--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: 1.8
+        java-version: 8.0.302+8
         distribution: 'adopt'
 
     - name: Build Android app
